--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about">
+                <a class="nav-link" href="#about">
                   About
                 </a>
               </li>
                             <li class="nav-item">
-                <a class="nav-link" href="about">
+                <a class="nav-link" href="#speakers">
                   Speaker
                 </a>
               </li>
@@ -190,7 +190,7 @@
     <!-- Counter Area End-->
 
     <!-- Team Section Start -->
-    <section id="team" class="section-padding text-center">
+    <section id="speakers" class="section-padding text-center">
       <div class="container">
         <div class="row">
           <div class="col-12">
