--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Header Area wrapper Starts -->
   <header id="header-wrap">
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-inverse fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>
@@ -118,7 +118,7 @@
                       <div class="about-content">
                         <div>
                           <div class="about-text">
-                            <h4>What is TEDxSabonGari ?</h4>
+                            <h4 class="definition">What is TEDxSabonGari ?</h4>
                             <p>TEDxSabonGari is not just an event, it's a movement. Rooted in the rich cultural and
                               intellectual
                               diversity of Sabon Gari Local Government and beyond, our goal is to showcase stories,
