update the social links

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <li>
               <i class="lni-phone"></i>
             </li>
-            <li><span>+23400000000</span></li>
+            <li><span>+2348162942976, +2349036625032</span></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-3 col-xs-12">
@@ -264,7 +264,7 @@
             <li>
               <i class="lni-envelope"></i>
             </li>
-            <li><span>info@tedxsabongari.com</span></li>
+            <li><span>tedxsabongari@gmail.com</span></li>
           </ul>
         </div>
       </div>
@@ -291,9 +291,9 @@
           </div>
           <div class="social-icons-footer">
             <ul>
-              <li class="facebook"><a target="_blank" href="3"><i class="lni-facebook-filled"></i></a></li>
-              <li class="twitter"><a target="_blank" href="3"><i class="lni-twitter-filled"></i></a></li>
-              <li class="pinterest"><a target="_blank" href="3"><i class="lni-pinterest"></i></a></li>
+              <li class="facebook"><a target="_blank" href="https://www.facebook.com/share/1BZeLrDg33/"><i class="lni-facebook-filled"></i></a></li>
+              <li class="tiktok"><a target="_blank" href="https://www.tiktok.com/@tedxsabongari?_r=1&_t=ZS-91exzGkY7M7"><i class="lni-twitter-filled"></i></a></li>
+              <li class="instagram"><a target="_blank" href="https://www.instagram.com/tedxsabongari?utm_source=qr&igsh=bjZjMHJudm5udnJ0"><i class="lni-instagram-filled"></i></a></li>
             </ul>
           </div>
 
