update the speakers seasons

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <i class="lni-mic"></i>
             </div>
             <div class="counter-content">
-              <div class="counterUp">42</div>
+              <div class="counterUp">0</div>
               <p>Spekers</p>
             </div>
           </div>
@@ -167,7 +167,7 @@
               <i class="lni-bulb"></i>
             </div>
             <div class="counter-content">
-              <div class="counterUp">800</div>
+              <div class="counterUp">0</div>
               <p>Seats</p>
             </div>
           </div>
@@ -179,7 +179,7 @@
               <i class="lni-briefcase"></i>
             </div>
             <div class="counter-content">
-              <div class="counterUp">24</div>
+              <div class="counterUp">0</div>
               <p>Sponsors</p>
             </div>
           </div>
@@ -191,7 +191,7 @@
               <i class="lni-coffee-cup"></i>
             </div>
             <div class="counter-content">
-              <div class="counterUp">56</div>
+              <div class="counterUp">0</div>
               <p>Sessions</p>
             </div>
           </div>
@@ -291,9 +291,14 @@
           </div>
           <div class="social-icons-footer">
             <ul>
-              <li class="facebook"><a target="_blank" href="https://www.facebook.com/share/1BZeLrDg33/"><i class="lni-facebook-filled"></i></a></li>
-              <li class="tiktok"><a target="_blank" href="https://www.tiktok.com/@tedxsabongari?_r=1&_t=ZS-91exzGkY7M7"><i class="lni-twitter-filled"></i></a></li>
-              <li class="instagram"><a target="_blank" href="https://www.instagram.com/tedxsabongari?utm_source=qr&igsh=bjZjMHJudm5udnJ0"><i class="lni-instagram-filled"></i></a></li>
+              <li class="facebook"><a target="_blank" href="https://www.facebook.com/share/1BZeLrDg33/"><i
+                    class="lni-facebook-filled"></i></a></li>
+              <li class="tiktok"><a target="_blank"
+                  href="https://www.tiktok.com/@tedxsabongari?_r=1&_t=ZS-91exzGkY7M7"><i
+                    class="lni-twitter-filled"></i></a></li>
+              <li class="instagram"><a target="_blank"
+                  href="https://www.instagram.com/tedxsabongari?utm_source=qr&igsh=bjZjMHJudm5udnJ0"><i
+                    class="lni-instagram-filled"></i></a></li>
             </ul>
           </div>
 
