fix the the comfirmation form

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <input type="file" id="receiptUpload" class="form-control-file" accept="image/*,.pdf"
               style="padding: 10px 0; background: transparent; border: none; color: #fff;" required>
           </div>
-          <button type="submit" class="btn btn-primary w-full">Proceed to Payment</button>
+          <button type="submit" class="btn btn-primary w-full">Proceed to Check </button>
         </form>
       </div>
     </div>
